# RGE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: documentation.cmake  externals.cmake  installing.cmake
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt
examples/01_Initialization/: init.cpp
include/: RGE.hpp  asset_manager.hpp
include/RGE/: GWindow.hpp  Logger.hpp  Math.hpp  RGE.hpp  Unix_Window.hpp  WIN32_Window.hpp  Window.hpp  rge_exports.h
include/RGE/Core/: Logger.hpp  Logging.hpp  Timer.hpp
include/RGE/Events/: Events.hpp
include/RGE/Input/: Definitions.hpp
include/RGE/Math/: Matrix.hpp  Vector.hpp
include/RGE/Render/: Shader.hpp  TextRenderer.hpp  Texture.hpp
include/RGE/Window/: GWindow.hpp
src/: CMakeLists.txt  GWindow.cpp  Unix_Window.cpp  Util.hpp  WIN32_Window.cpp  Window.cpp  asset_manager.cpp
src/Core/: Logging.cpp  Timer.cpp
src/Events/: EventQueue.cpp  EventQueue.hpp  Events.hpp
src/Math/: Vector.cpp
src/Render/: Shader.cpp  TextRenderer.cpp  Texture.cpp
src/Render/Fonts/: Cousine.ttf.hpp
src/Window/: GWindow.cpp
subprojects/: CMakeLists.txt
subprojects/RGEDriver/: RGEDriver.cpp
subprojects/RGETest/: RGETest.cpp
tests/: CMakeLists.txt  main.cpp  test_asset_manager.cpp
